--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.0",
     "cogo-toast": "^4.2.3",
+    "google-map-react": "^2.1.9",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-animate-on-scroll": "^2.1.5",
