--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "axios": "^0.21.0",
     "cogo-toast": "^4.2.3",
     "google-map-react": "^2.1.9",
+    "hamburger-react": "^2.4.0",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
     "react-image-gallery": "^1.0.8",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.11",
