--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-yandex-maps": "^4.4.0",
     "reactjs-popup": "^2.0.4",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "simple-react-lightbox": "^3.3.4-2"
   },
   "scripts": {
