--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.0",
     "cogo-toast": "^4.2.3",
+    "fslightbox-react": "^1.6.2",
     "google-map-react": "^2.1.9",
     "hamburger-react": "^2.4.0",
     "node-sass": "^4.14.1",
@@ -49,7 +50,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "fslightbox-react": "file:src/libs/fslightbox-react-basic-1.5.0.tgz"
-  }
+  "devDependencies": {}
 }
